// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerList /> renders admin user properly 1`] = `
<WithStyles(ForwardRef(TableContainer))>
  <WithStyles(ForwardRef(Table))>
    <caption
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        3
        /
        16
         max
      </div>
    </caption>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))
          align="center"
        >
          Ready?
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          Player
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          Games Won
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell)) />
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))>
      <WithStyles(ForwardRef(TableRow))
        key="1"
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.08)",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="checkbox"
        >
          <WithStyles(ForwardRef(Checkbox))
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "color": "red",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
           - Admin
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          0
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell)) />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="2"
        style={
          Object {
            "backgroundColor": "inherit",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="default"
        >
          <Memo(ForwardRef(CloseIcon))
            style={
              Object {
                "color": "red",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          0
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(IconButton))
            onClick={[Function]}
            size="small"
          >
            <Memo(ForwardRef(DeleteOutlineIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="3"
        style={
          Object {
            "backgroundColor": "inherit",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="default"
        >
          <Memo(ForwardRef(CheckIcon))
            style={
              Object {
                "color": "green",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
           - Winner
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          3
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(IconButton))
            onClick={[Function]}
            size="small"
          >
            <Memo(ForwardRef(DeleteOutlineIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
</WithStyles(ForwardRef(TableContainer))>
`;

exports[`<PlayerList /> renders properly with 3 players 1`] = `
<WithStyles(ForwardRef(TableContainer))>
  <WithStyles(ForwardRef(Table))>
    <caption
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        3
        /
        16
         max
      </div>
    </caption>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))
          align="center"
        >
          Ready?
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          Player
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          Games Won
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))>
      <WithStyles(ForwardRef(TableRow))
        key="1"
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.08)",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="checkbox"
        >
          <WithStyles(ForwardRef(Checkbox))
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "color": "red",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          0
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="2"
        style={
          Object {
            "backgroundColor": "inherit",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="default"
        >
          <Memo(ForwardRef(CloseIcon))
            style={
              Object {
                "color": "red",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          0
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="3"
        style={
          Object {
            "backgroundColor": "inherit",
          }
        }
      >
        <WithStyles(ForwardRef(TableCell))
          align="center"
          padding="default"
        >
          <Memo(ForwardRef(CheckIcon))
            style={
              Object {
                "color": "green",
              }
            }
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          username
           - Winner
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          3
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
</WithStyles(ForwardRef(TableContainer))>
`;

exports[`<PlayerList /> renders properly without gameInfo 1`] = `
<WithStyles(ForwardRef(TableContainer))>
  <WithStyles(ForwardRef(Table))>
    <caption
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        0
        /
        16
         max
      </div>
    </caption>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))
          align="center"
        >
          Ready?
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          Player
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          align="right"
        >
          Games Won
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody)) />
  </WithStyles(ForwardRef(Table))>
</WithStyles(ForwardRef(TableContainer))>
`;
